--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,92 @@ a{
     font-size: 0.8rem;
     font-family: popins;
 }
+.section1{
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    transform: translate(-15%, -50%);
+}
+.section1 img{
+    height: 300px;
+}
+.section1Button {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -80%);
+}
+.section1Button h1,h2{
+    font-family: roboto;
+    font-weight: bold;
+    margin: 0;
+    line-height: 60px;
+    font-size: 4rem;
+    /* text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8); */
+    letter-spacing: 3px;
+    color: #3d3d4a;
+    text-transform: uppercase;
+}
+span{
+    color: #7a72ff;
+}
+.section1Button h1{
+    letter-spacing: 33px;
+}
+.btn{
+     width: 150px;
+     height: 40px;
+     background-color: #2f2e41;
+     box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     border-radius: 10% 10% 10% 10% / 50%  50% 50% 50%;
+     color: #fff;
+     font-family: calibri;
+     font-weight: 600;
+     letter-spacing: 0.5px;
+     font-size: 1rem;
+     outline: none;
+     cursor: pointer;
+     border: transparent !important;
+}
+.btn:hover{
+    color: #fff;
+    background-color: #6e64ff;
+    transition:all ease 0.5s;
+}
+.iconArea{
+    position: fixed;
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 20px;
+    background-color: #fff;
+    box-shadow:  2px 2px 30px rgba(0, 0, 0, 0.2);
+    padding:5px 0;
+    z-index: 1;
+}
+.iconArea a{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 15px;
+
+}
+.iconArea a i{
+    color: rgba(39, 39, 39, 0.80);
+}
+.iconArea a:hover .fa-facebook{
+    color: #3b5998;
+}
+.iconArea a:hover .fa-twitter{
+    color: #00acee
+}
+.iconArea a:hover .fa-instagram{
+    color: #3f729b;
+}
+.iconArea a:hover .fa-youtube{
+    color: #ff0000;
+}
