--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,18 @@ span{
 .iconArea a:hover .fa-youtube{
     color: #ff0000;
 }
+
+.porductSection{
+    width: 85%;
+    background-color: #fff;
+    display: flex;
+    margin:  30px auto;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 20px;
+    box-shadow:2px 2px 30px rgba(167, 158, 245, 0.2);
+    margin-top: -60px;
+    position: relative;
+    background-size: 1000px;
+    border-radius: 10px;
+}
