--- a/css/style.css
+++ b/css/style.css
@@ -160,3 +160,174 @@ span{
     background-size: 1000px;
     border-radius: 10px;
 }
+.porductSection > h3{
+    margin: 20px;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
+    font-family: myriad pro;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-align: center;
+    font-size: 2rem;
+    color: #323543;
+}
+.product{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 10px 0;
+    width: 100%;
+}
+.productBox{
+    width: 350px;
+    height: 330px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+     flex-direction: column;
+     position: relative;
+     border-radius: 8px;
+     margin: 10px 30px;
+}
+.productBox img{
+    height: 180px;
+}
+.product p{
+     color: #4d4d4d70;
+    font-family: myriad pro;
+    font-size: 0.9rem;
+    letter-spacing: 0.5px;
+}
+.product a{
+    color: #2c2c2c;
+    font-family: poppins;
+    font-size: 1rem;
+}
+.butBtn{
+    position: absolute;
+    width: 140px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: calibri;
+    left: 50%;
+    bottom: -20px;
+    transform: translateX(-50%);
+    border-radius: 15% 15% 15% 15% / 50% 50% 50% 50%;
+    background:linear-gradient(120deg, #6b60ec 20%, #a166f4);
+    color: #fff;
+    animation: fade 0.2s;
+    display: none ;
+}
+.productBox:hover .butBtn{
+    display: flex;
+}
+.productBox:hover{
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+.productBox:hover a:last-child{
+    color: #fff;
+    transition: all ease 0.3s;
+}
+
+
+.about{
+    display: flex;
+    width: 85%;
+    justify-content: space-around;
+    margin: 50px auto;
+    align-items: center;
+    padding: 30px;
+    margin-bottom: 150px;
+}
+.aboutBox{
+    width: 40%;
+    font-family: myriad pro;
+}
+.aboutBox img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.aboutBox h1{
+    color: #333333;
+    font-weight: 700;
+    font-size: 3rem;
+    margin: 0px;
+}
+.aboutBox h4{
+    color:#333333;
+    font-weight: 400;
+    font-size: 2rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.aboutBox p{
+    color: #bdbdbd;
+    font-size: 1rem;
+    margin-top: 10px;
+    letter-spacing: 0.5px;
+}
+
+
+.notification{
+    width: 100%;
+    height: 250px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.03);
+}
+.notification .h3{
+    font-size: 2rem;
+    color: rgb(56, 56, 56);
+}
+.notificationInput{
+    width: 500px;
+    background-color: #fff;
+    border-radius: 7% 7% 7% 7% / 50% 50% 50% 50%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 20px;
+    box-shadow: 2px 5px 30px rgba(0, 0, 0, 0.1);
+    margin-top: 30px;
+}
+.notificationInput input{
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+.notificationBtn{
+    width: 120px;
+    height: 40px;
+    background-color: #202020;
+    border-radius: 20px;
+    color:#fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1rem;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+}
+.notificationBtn:hover{
+    background-color: #6b60ec;
+    transition: all ease 0.5s;
+}
+footer{
+    background-color: black;
+    padding: 20px;
+}
+footer p{
+    text-align: center;
+    color: #f2f2f2;
+}
